Update index.html for changed headings

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               <div class="detail-box">
                 <h1>
                   We Build <br />
-                  The Things Architects <br />
+                  CI/CD Pipelines Architects <br />
                   Dream Up
                 </h1>
                 <div class="btn-box">
@@ -149,7 +149,7 @@
               <div class="detail-box">
                 <h1>
                   We Build <br />
-                  The Things Architects <br />
+                  Ansible Playbooks Architects <br />
                   Dream Up
                 </h1>
                 <div class="btn-box">
@@ -168,7 +168,7 @@
               <div class="detail-box">
                 <h1>
                   We Build <br />
-                  The Things Architects <br />
+                  Jenkins Servers Architects <br />
                   Dream Up
                 </h1>
                 <div class="btn-box">
