Update index.html for modifying headings again

--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
             <div class="container ">
               <div class="detail-box">
                 <h1>
-                  We Build <br />
-                  CI/CD Pipelines Architects <br />
-                  Dream Up
+                  AWS Builds <br />
+                  CI/CD Pipelines <br />
+                  We Dream Up
                 </h1>
                 <div class="btn-box">
                   <a href="" class="btn1">
@@ -148,9 +148,9 @@
             <div class="container ">
               <div class="detail-box">
                 <h1>
-                  We Build <br />
-                  Ansible Playbooks Architects <br />
-                  Dream Up
+                  AWS Builds <br />
+                  Ansible Playbooks <br />
+                  We Dream Up
                 </h1>
                 <div class="btn-box">
                   <a href="" class="btn1">
@@ -167,9 +167,9 @@
             <div class="container ">
               <div class="detail-box">
                 <h1>
-                  We Build <br />
-                  Jenkins Servers Architects <br />
-                  Dream Up
+                  AWS Build <br />
+                  Jenkins Servers <br />
+                 We Dream Up
                 </h1>
                 <div class="btn-box">
                   <a href="" class="btn1">
